compiler/testData/cli/js/leakingPrivateClassFromLocalObjectInsideInternalInline.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+IrInlinerBeforeKlibSerialization

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

warning: following manually enabled features will force generation of pre-release binaries: IrInlinerBeforeKlibSerialization
compiler/testData/cli/js/leakingPrivateClassFromLocalObjectInsideInternalInline.kt:5:39: error: inline function accesses a declaration with narrower visibility: private final class Nested defined in A
    private inline fun privateFun() = Nested().foo()
                                      ^^^^^^^^
COMPILATION_ERROR
